--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest src/tests/application/domain/User.test.js",
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest src/tests/jobs/log.test.js",
     "dev": "NODE_ENV=dev nodemon src/index.js",
     "start": "node src/index.js"
   },
@@ -33,10 +33,15 @@
   },
   "dependencies": {
     "chalk": "^5.0.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "ws": "^8.5.0"
   }
 }
