--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest src/tests/jobs/log.test.js",
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest src/tests/application/domain/User.test.js",
     "dev": "NODE_ENV=dev nodemon src/index.js",
     "start": "node src/index.js"
   },
