--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "jest": {
-      "verbose": true
+    "verbose": true
   },
   "scripts": {
     "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --coverage",
@@ -38,6 +38,7 @@
   "dependencies": {
     "chalk": "^5.0.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
